<resources>
    <string name="app_name">Inventario</string>
    <string name="Añadir_Lectura">Añadir Lectura</string>
    <string name="Exportar_a_Excel">Exportar a Excel</string>
    <string name="Introduce_el_código">Introduce el código</string>
    <string name="Código_de_Barras">Código de Barras:</string>
    <string name="Zona">Zona:</string>
    <string name="Pareja">Pareja:</string>
    <string name="conteo">Conteo</string>
    <string name="cant_manual">Cantidad:</string>
    <string name="cantidad_manual">Ingrese la Cantidad:</string>
    <string name="eliminar_producto">Eliminar Producto</string>
    <string-array name="conteos">
        <item>conteo1</item>
        <item>conteo2</item>
        <item>conteo3</item>
    </string-array>

</resources>